Add code for (optional) single-precision G3Timestreams.
This branch makes G3Timestream (but not intermediates and not accumulators
like G3SkyMap) single-precision by default, with double-precision
selectable at compile-time.

The old behavior (double-precision timestreams) can be selected at
compile time by setting the cmake option G3TIMESTREAM_DOUBLE_PRECISION.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -102,6 +102,11 @@ find_package(FFTW)
 find_package(HDF5)
 find_package(MPI)
 
+# Useful options
+if(G3TIMESTREAM_DOUBLE_PRECISION)
+	add_compile_definitions(G3TIMESTREAM_DOUBLE_PRECISION)
+endif()
+
 # Convenience macros
 macro(link_python_dir)
 	execute_process(COMMAND mkdir -p ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
